apps/howard-prod/podinfo/podinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: podinfo
  name: podinfo
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9898
  selector:
    app: podinfo
